# iox2redis-json

./: .gitignore  Cargo.toml  FEATURE_PARITY.md  README.md  build.rs  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: client.py  client_flask.py  dump_load_all.py  hot_reload.py  hot_reload_app.py  server.py  stdio_demo.sh
src/: client.rs  codec.rs  lib.rs  store.rs  transport.rs
src/iox2redis/: __init__.py  client.py  codec.py  connection.py  server.py  transport.py
tests/: codec.rs  protocol_store.rs  store.rs  test_benchmark_direct_iox2.py  test_benchmark_live_iox2.py  test_benchmark_multi_client.py  test_codec.py  test_multi_client.py  test_server_info.py  test_store.py
