[package]
name = "iox2redis-json"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Redis-like JSON SET/GET over iceoryx2-compatible request/response frames"

[lib]
name = "iox2redis_json"
path = "src/lib.rs"

[[bin]]
name = "iox2redis-server"
path = "src/bin/server.rs"

[[bin]]
name = "iox2redis-client"
path = "src/bin/client.rs"

[features]
default = []
iox2 = ["dep:iceoryx2"]

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1.0"
iceoryx2 = { version = "0.9.2", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
