[project]
name = "iox2redis-json"
version = "0.1.0"
description = "A small redis-py compatible JSON SET/GET client and server over iceoryx2 IPC."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "HUANGYI QIN" }
]
keywords = ["redis", "redis-py", "iceoryx2", "ipc", "json"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "redis>=5.0.0",
  "iceoryx2>=0.9.1",
]

[dependency-groups]
dev = [
  "py-cpuinfo>=9.0.0",
  "pytest>=8.0.0",
  "pytest-benchmark>=4.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "flask>=3.1.3",
]

[tool.pytest.ini_options]
markers = [
  "iox2: requires live iceoryx2 IPC support",
]

[project.scripts]
iox2redis-server = "iox2redis.server:main"

[project.urls]
Homepage = "https://github.com/your-name/iox2redis-json"
Repository = "https://github.com/your-name/iox2redis-json"
Issues = "https://github.com/your-name/iox2redis-json/issues"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iox2redis"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.11"
packages = ["iox2redis"]
strict = true
warn_unreachable = true
warn_unused_configs = true
